Added logging to oubound

--- a/force-app/main/default/classes/HttpRequestContext.cls
+++ b/force-app/main/default/classes/HttpRequestContext.cls
@@ -2,7 +2,8 @@ public class HttpRequestContext {
 	private HttpRequest request;
     private String path;
     private HttpSecuritySetter securitySetter;
-	
+	private String requestId;
+    
     public HttpRequestContext(String method, HttpSecuritySetter securitySetter) {
         this.request = new HttpRequest();
         this.request.setMethod(method);
@@ -31,5 +32,21 @@ public class HttpRequestContext {
     }        
     public String getEndPoint(){
         return (this.request.getEndpoint() + this.path);
-    }        
+    }   
+ 	public String getBody(){
+        return this.request.getBody();
+    } 
+    private String generateRequestId() {
+        return new CorrelationIdGenerator().generateCorrelationId();
+    }    
+    public String getRequestId() {
+        if (this.requestId == null) {
+            this.requestId = this.generateRequestId();
+        }
+        return this.requestId;
+    }
+
+    public void setRequestId(String id) {
+        this.requestId = id;
+    }
 }
